@@ -22,7 +22,6 @@ num_devices=2
 # idle0, idle1, ... are the flags (nonempty = true) whether idle pages are
 #                   written to the backup device (requires back*)
 # wlim0, wlim1, ... set the writeback_limit for idle pages (implies idle*)
-# maxs0, maxs1, ... are the variables for the maximal (parallel) streams
 # algo0, algo1, ... are the variables for the compression algorithms
 # para0, para1, ... are the variables for the algorithm parameters
 # flag0, flag1, ... are the variables for the flags
@@ -68,7 +67,6 @@ icmp0= # no incompressible page writing to backup device
 idle0= # no idle page writing to backup device
 wlim0= # no writeback_limit for idle page writing for backup device
 notr0= # keep the default on linux-3.15 or newer
-maxs0=1 # maximum number of parallel processes for this device
 algo0=zstd # zstd (since linux-4.18), lz4 (since linux-3.15), or lzo.
            # Size: zstd (best) > lzo > lz4. Speed: lz4 (best) > zstd > lzo
 para0= # No algorithm parameters
@@ -95,7 +93,6 @@ opts1="strictatime,nosuid,nodev,noexec" # e.g. "relatime" or "noatime" are also 
 mode1=1777
 owgr1= # No reason to change the default "root:root"
 notr1= # keep the default on linux-3.15 or newer
-maxs1=2
 algo1=zstd
 para1="level=3" # algorithm-specific parameters such as compression level
 labl1=tmp_dir
@@ -118,7 +115,6 @@ opts2=relatime # e.g. "noatime" or "strictatime" are also reasonable choices
 mode2=1777
 owgr2= # No reason to change the default "root:root"
 notr2= # keep the default on linux-3.15 or newer
-maxs2=1
 algo2=zstd
 para0= # No algorithm parameters
 labl2=var_tmp_dir
@@ -130,21 +126,16 @@ args2=
 type3=- # Only format the filesystem but actually do not mount it
 flag3=btrfs
 size3=1024
-maxs3=1
 algo3=zstd
 labl3=zbtrfs
 uuid3=
 args3=
 
 # swap - 500M
-# With current kernels, Instead of adding an additional swap device,
-# you better increase the size and maxs value of the first swap device.
-# Thus, the following makes only sense for older kernels not supporting maxs.
-# For this reason, the following is not used by the default (num_devices=3).
+# The following is not used by the default (num_devices=3).
 type3=swap
 flag3=
 size3=512
-maxs3=1
 algo3=zstd
 labl3=zram_swap2
 uuid3=
