@@ -9,13 +9,12 @@ Before=local-fs.target umount.target
 Type=oneshot
 RemainAfterExit=true
 
-# Adapt the maximal size (in MB) and other options like maximal number of
-# parallel streams (-s) to your needs.
+# Adapt the maximal size (in MB) and other options to your needs.
 # Make sure to avoid collision of devices (-d...) with
 # zram_swap.service, zram_var_tmp.service, zram_tmp.service, and
 # that num_devices in modprobe.d/zram.conf contains the maximal used number + 1
 
-ExecStart=/sbin/zram-init -d1 -s2 -azstd -A "algo=zstd level=3" -tbtrfs -Lzbtrfs 2048 -
+ExecStart=/sbin/zram-init -d1 -azstd -A "algo=zstd level=3" -tbtrfs -Lzbtrfs 2048 -
 ExecStop=/sbin/zram-init -d1 0 -
 
 [Install]
