@@ -9,13 +9,12 @@ Before=local-fs.target umount.target
 Type=oneshot
 RemainAfterExit=true
 
-# Adapt the maximal size (in MB) and other options like maximal number of
-# parallel streams (-s) to your needs.
+# Adapt the maximal size (in MB) and other options to your needs.
 # Make sure to avoid collision of devices (-d...) with
 # zram_swap.service and zram_tmp.service and
 # that num_devices in modprobe.d/zram.conf contains the maximal used number + 1
 
-ExecStart=/sbin/zram-init -d2 -s2 -azstd -A "algo=zstd level=3" -text4 -orelatime -m1777 -Lvar_tmp_dir 2048 /var/tmp
+ExecStart=/sbin/zram-init -d2 -azstd -A "algo=zstd level=3" -text4 -orelatime -m1777 -Lvar_tmp_dir 2048 /var/tmp
 ExecStop=/sbin/zram-init -d2 0 /var/tmp
 
 [Install]
